# simple-password

./: .gitignore  pyproject.toml  readme.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
design materials/: simple password.excalidraw
src/data_types/: identity.py  user.py  web_account.py
tests/: test_datatypes.py
