[metadata]
name = simple password
author = Jesse Williams
author_email = jesse@negativespacesounds.com
license = wtfpl
description = This repo is a fun project to test and should not be considered a usable product.
url = https://github.com/jesses-code-adventures/simple-password
platforms = osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = 
    data_types
    utils
install_requires = 
    psycopg2>=2.8
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
[options.package_data]
data_types = py.typed
utils = py.typed